package designpatterns.observer;

public interface Client {
    void update(String username);
}
