package designpatterns.strategy;

public interface EatingableBehaviour {
    String eat();
}
