package designpatterns.strategy;

public interface FlyiableBehaviour {
    String fly();
}
