package designpatterns.strategy;

public class NoFlyingBehaviour implements FlyiableBehaviour {
    @Override
    public String fly() {
        return null;
    }
}
